--- a/style.css
+++ b/style.css
@@ -1,42 +1,3 @@
-/*----------------------------------------------------
-@File: Default Styles
-@Author: Rocky Ahmed
-@URL: http://wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-This file contains the styling for the actual theme, this
-is the file you need to edit to change the look of the
-theme.
----------------------------------------------------- */
-/*=====================================================================
-@Template Name: HostHub Construction
-@Author: Rocky Ahmed
-@Developed By: Rocky Ahmed
-@Developer URL: http://rocky.wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-@Default Styles
-
-Table of Content:
-01/ Variables
-02/ predefin
-03/ header
-04/ button
-05/ banner
-06/ breadcrumb
-07/ about
-08/ team
-09/ project
-10/ price
-11/ team
-12/ blog
-13/ video
-14/ features
-15/ career
-16/ contact
-17/ footer
-
-=====================================================================*/
 /*----------------------------------------------------*/
 /*font Variables*/
 /*Color Variables*/
@@ -63,6 +24,7 @@ body {
   line-height: 24px;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-weight: normal;
   color: #777777; }
 
@@ -153,6 +115,7 @@ button:focus {
       margin-right: 45px; }
       .header_area .navbar .nav .nav-item .nav-link {
         font: 500 12px/100px "Roboto", sans-serif;
+        font-family: 'Comfortaa', cursive;
         text-transform: uppercase;
         color: #fff;
         padding: 0px;
@@ -274,6 +237,7 @@ button:focus {
     display: inline-block;
     color: #fff;
     font-family: "Roboto", sans-serif;
+    font-family: 'Comfortaa', cursive;
     text-transform: uppercase;
     font-size: 12px;
     margin-right: 50px;
@@ -286,6 +250,7 @@ button:focus {
     background: #3bacf0;
     color: #fff;
     font-family: "Roboto", sans-serif;
+    font-family: 'Comfortaa', cursive;
     line-height: 40px;
     display: block;
     padding: 0px 40px;
@@ -2454,6 +2419,7 @@ h6 {
   padding: 0px 35px;
   color: #fff;
   font-family: "Roboto", sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 13px;
   font-weight: 500;
   line-height: 50px;
@@ -2532,6 +2498,7 @@ h6 {
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
   font-family: "Roboto", sans-serif;
+  font-family: 'Comfortaa', cursive;
   width: 134px;
   font-size: 14px;
   font-weight: 500;
@@ -2605,6 +2572,7 @@ h6 {
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
   font-family: "Roboto", sans-serif;
+  font-family: 'Comfortaa', cursive;
   width: 134px;
   font-size: 13px;
   font-weight: 500;
