--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-family: 'Comfortaa', cursive;
   font-weight: normal;
+  overflow-x: hidden;
   color: #777777; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -113,6 +114,20 @@ button:focus {
     width: 100%; }
     .header_area .navbar .nav .nav-item {
       margin-right: 45px; }
+    .nav-item:after {
+      content: '>';
+      position: absolute;
+      top: 20px;
+      right: -5px;
+      font-size: 18px;
+      font-weight: 100;
+      color: #c3c3c3;
+    }
+    .nav-item:last-child:after {
+      content: '';
+      top: 0;
+      right: 0;
+    }
       .header_area .navbar .nav .nav-item .nav-link {
         font: 500 12px/100px "Roboto", sans-serif;
         font-family: 'Comfortaa', cursive;
@@ -2650,7 +2665,8 @@ h6 {
   .made_life_inner .nav.nav-tabs li {
     flex: 0 0 25%;
     max-width: 25%;
-    padding: 0px 15px; }
+    padding: 0px 15px; 
+    position: relative; }
     .made_life_inner .nav.nav-tabs li a {
       border: none;
       padding: 0px;
@@ -2989,8 +3005,8 @@ h6 {
   .copy_right_text p a {
     color: #3bacf0; }
 
-/* End Footer Area css
-============================================================================================ */
-/*---------------------------------------------------- */
 
-/*# sourceMappingURL=style.css.map */
+.img-shadow {
+  border: 1px solid #eee;
+  box-shadow: 1px 1px 20px #0003;
+}
